; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_time.c_xen_timerop_set_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_time.c_xen_timerop_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.clock_event_device*)* @xen_timerop_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_timerop_set_mode(i32 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.clock_event_device*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %11 [
    i32 131, label %6
    i32 132, label %8
    i32 130, label %8
    i32 128, label %9
    i32 129, label %9
  ]

6:                                                ; preds = %2
  %7 = call i32 @WARN_ON(i32 1)
  br label %11

8:                                                ; preds = %2, %2
  br label %11

9:                                                ; preds = %2, %2
  %10 = call i32 @HYPERVISOR_set_timer_op(i32 0)
  br label %11

11:                                               ; preds = %2, %9, %8, %6
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @HYPERVISOR_set_timer_op(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
